--- a/src/app/shared/components/category-select/category-select.scss
+++ b/src/app/shared/components/category-select/category-select.scss
@@ -12,7 +12,7 @@
   &__trigger {
     display: flex;
     align-items: baseline;
-    gap: 0.45rem;
+    gap: 1.55rem;
     border-radius: 6px;
     padding: 0.5em;
     color: white;
